--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /*Estilos Lin Fox Gamer - MINECRAFT MODS 
-Author: leandrocsguitar@gmail.com
-
+Author: leandrocsguitar@gmail.com 
 */
 
-* {}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, ”Segoe UI”, Roboto, Oxygen-Sans, Ubuntu, Cantarell, ”Helvetica Neue”, sans-serif;}
+    background-color: #000;
