--- a/style.css
+++ b/style.css
@@ -8,5 +8,7 @@ Author: leandrocsguitar@gmail.com
     box-sizing: border-box;
 }
 body {
-    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, ”Segoe UI”, Roboto, Oxygen-Sans, Ubuntu, Cantarell, ”Helvetica Neue”, sans-serif;}
-    background-color: #000;
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, ”Segoe UI”, Roboto, Oxygen-Sans, Ubuntu, Cantarell, ”Helvetica Neue”, sans-serif;
+    background-color: #666;
+    color: #eeeeee;
+}
