--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ Author: leandrocsguitar@gmail.com
 }
 body {
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, ”Segoe UI”, Roboto, Oxygen-Sans, Ubuntu, Cantarell, ”Helvetica Neue”, sans-serif;
-    background-color: #666;
+    background-color: #000;
     color: #eeeeee;
 }
+
+a {color: #009ACD; text-decoration: none;}
