--- a/style.css
+++ b/style.css
@@ -9,8 +9,26 @@ Author: leandrocsguitar@gmail.com
 }
 body {
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, ”Segoe UI”, Roboto, Oxygen-Sans, Ubuntu, Cantarell, ”Helvetica Neue”, sans-serif;
-    background-color: #000;
+    background-color: #1C1C1C;
     color: #eeeeee;
 }
 
-a {color: #009ACD; text-decoration: none;}
+a {color: #009ACD; text-decoration: none;border: none;outline: none;}
+a:hover {color: #fff;}
+li {list-style: none;}
+p {margin: 10px 0;}
+main { margin: 0 auto; padding: 0;}
+.section {  clear: both; padding: 0px; margin: 0px;} 
+.row { zoom: 1; max-width: 1260px; margin: 0 auto;}
+.row:before,
+.row:after { content: ""; display: table;}
+.row:after { clear: both;}
+.col { display: block;float: left; margin: 1% 0 1% 1.6%;}
+.col:first-child { margin-left: 0;}
+h1,
+h2 { font-weight: 300; text-transform: uppercase; line-height: 120%;letter-spacing: 1px;margin-bottom: 5px;}
+h1 { font-size: 160%;}
+h2 { font-size: 140%;}
+article {  padding: 10px; background-color: #EEE;}
+.container {  display: flex; flex-wrap: wrap; justify-content: space-between; width: 100%; max-width: 1260px; margin: 0 auto;}
+.align-center {  align-items: center;}
