--- a/style.css
+++ b/style.css
@@ -309,6 +309,11 @@ footer li {
         width: 100%;
     }
 
+    .imagem {
+        width: 98%;
+        margin: 10px 0 20px 0;
+    }
+
     footer li {
         margin: 6px 0;
     }
